reversed order of shown entries at the end

--- a/PrizeWinnerPicker/PrizeWinnerPicker.csproj
+++ b/PrizeWinnerPicker/PrizeWinnerPicker.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\subtember.txt" />
+    <Content Include="subtember.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
